# shairplay

./: .gitignore  LICENSE  Makefile  README  README.md  SConstruct  configure.ac
AirTV-Qt/: AirTV.pro  audiocallbacks.cpp  audiocallbacks.h  audiooutput.cpp  audiooutput.h  main.cpp  mainapplication.cpp  mainapplication.h  raopcallbackhandler.cpp  raopcallbackhandler.h  raopservice.cpp  raopservice.h
extras/xcode/alac/alac.xcodeproj/: project.pbxproj
extras/xcode/alac/alac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
extras/xcode/alac/alac.xcodeproj/xcshareddata/xcschemes/: alac.xcscheme
extras/xcode/crypto/crypto.xcodeproj/: project.pbxproj
extras/xcode/crypto/crypto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
extras/xcode/crypto/crypto.xcodeproj/xcshareddata/xcschemes/: crypto.xcscheme
extras/xcode/shairplay/shairplay.xcodeproj/: project.pbxproj
extras/xcode/shairplay/shairplay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
extras/xcode/shairplay/shairplay.xcodeproj/xcshareddata/xcschemes/: shairplay-application.xcscheme  shairplay-library.xcscheme
include/: raop.h
include/shairplay/: airplay.h  dnssd.h  raop.h
scons-tools/: crossmingw.py  crossmingw64.py
src/: Makefile.am  SConscript  audio.c  audio.h  compat.h  dnssd.c  dnssd.m  dnssdint.h  http_parser.c  http_parser.h  http_request.c  http_response.c  http_response.h  httpd.c  httpd.h  logger.c  logger.h  mdns_dnssd.c  memalign.h  netutils.c  netutils.h  raop.c  raop_buffer.h  raop_rtp.c  raop_rtp.h  rsakey.h  sdp.c  shairplay.c  sockets.h  threads.h
src/bindings/python/: Shairplay.py
src/bindings/qt4/: dnssdservice.cpp  dnssdservice.h  raopcallbackhandler.cpp  raopcallbackhandler.h  raopcallbacks.h  raopservice.cpp  raopservice.h
src/include/: dnssd.h  raop.h
src/lib/: Makefile.am  aes_ctr.c  aes_ctr.h  airplay.c  base64.c  base64.h  bio.h  compat.h  digest.c  digest.h  dnssd.c  dnssd.m  dnssdint.h  fairplay.c  fairplay.h  fairplay_dummy.c  fairplay_playfair.c  fpsetup.c  fpsetup.h  global.h  http_parser.c  http_parser.h  http_request.c  http_request.h  http_response.c  http_response.h  httpd.c  httpd.h  logger.c  logger.h  netutils.c  netutils.h  pairing.c  pairing.h  plist.c  plist.h  raop.c  raop_buffer.c  raop_buffer.h  raop_decoder.c  (+17 more)
src/lib/aac_eld/: Makefile.am  aac_eld.c  aac_eld.h
src/lib/alac/: alac.c  alac.h
src/lib/crypto/: Makefile.am  crypto.h  new_aes.c  os_port.h
src/lib/curve25519/: Makefile.am
src/lib/ed25519/: Makefile.am
src/lib/playfair/: Makefile.am
src/test/: dnssd_test.c  example.c  test.py
test/: dnssd_test.m  shairport.c
